. (kfsone) Update GUI now selects the first column of the first line on startup
. (kfsone) Update GUI now supports up/down key inputs and has a default size
. (kfsone) Issue#57 Fixed extra cache rebuilds after doing an 'update'
. (kfsone) Changing .prices won't force a full rebuild of the cache
. (kfsone) Better integrated update gui (improved startup times)

v6.0.3 Nov 21 2014
. (kfsone) Added a GUI to the "update" sub-command, it's experimental:
   - Use <tab>/<shift-tab> to cycle across rows,
   - Use <enter> to drop to the first column of the next line,
   - Scrolling is currently broken - you have to manually scroll. Ick.
   - Use the "--exp" flag to indicate your understanding it is experimental.
     e.g.: trade.py update --exp aulin
. (kfsone) Fixed sqrt crash in buildCache.py in multi-station systems,
. (kfsone) Fixed "local" command not showing stations when using "--detail",
. (kfsone) Renamed "buildcache.py" to "cache.py"

BETA 3: 
CAUTION: So many systems changed with the Beta 3 update that old prices files
won't stand a chance of containing many valid systems. You may want to obtain
a fresh file from one of the online sources, e.g.
maddavo's site: http://www.davek.com.au/td/default.asp

v6.0.2 Nov 20 2014
. (maddavo) Imported additional systems
. (kfsone) Big performance improvements
. (kfsone) Added '--limit' to 'buy' sub-command
. (kfsone) Stop forcing "Chu hub" to be "Chi hub" (Styx)
. (kfsone) Improved speed of cache build

v6.0.1 Nov 16 2014 (kfsone)
. Added "--end" option to "run" for multiple-choice route termination.
. Database refactor to improve runtime performance
-- Some commands were taking upto 50s to load data from the cache.
-- By reorganizing some data and adding better indexes, the run command,
-- for example, went from 60s+ with a full prices file down to 3-4.
. Assorted minor functionality and perf improvements,
. Various bug fixes

NOTE: Rebuilding the cache can now take 2-8 seconds, but you only