@@ -40,6 +40,11 @@ switches = [
             action='store_true',
             default=False,
         ),
+    ParseArgument('--all', '-A',
+            help='List all known items.',
+            action='store_true',
+            default=False,
+        ),
     ParseArgument('--force-na', '-0', 
             help="Forces 'unk' supply to become 'n/a' by default",
             action='store_true',
