@@ -11,6 +11,8 @@ v6.0.4 Nov 21 2014 (Beta 3.9.1)
 . (kfsone) Issue#57 Fixed extra cache rebuilds after doing an 'update'
 . (kfsone) Changing .prices won't force a full rebuild of the cache
 . (kfsone) Better integrated update gui (improved startup times)
+. (kfsone) Added "--all" (-A) option to 'update -G' to show ALL items
+. (kfsone) (Update GUI) Set 'selling' and 'asking' to 0 to delete an item
 
 v6.0.3 Nov 21 2014
 . (kfsone) Added a GUI to the "update" sub-command, it's experimental:
